# learning_genai

./: .pre-commit-config.yaml  notes.tex  pyproject.toml
learning_gen_ai/: main.py
